# maxconsole

./: .gitignore  README.md  max_theme.ini  maxconsole.py  pyproject.toml
tests/: maxconsole_tests.py
