[tool.pdm]

[project]
name = "maxconsole"
version = "0.5.0"
description = "MaxConsole instantiates a customizable themed wrapper around the awesome Rich Library's Console."
authors = [{ name = "maxludden", email = "dev@maxludden.com" }]
dependencies = ["rich>=12.6.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
